src/test/ui/nll/closure-requirements/region-lbr-named-does-not-outlive-static.stderr
warning: not reporting region error due to nll
  --> $DIR/region-lbr-named-does-not-outlive-static.rs:19:5
   |
LL |     &*x
   |     ^^^

error: unsatisfied lifetime constraints
  --> $DIR/region-lbr-named-does-not-outlive-static.rs:19:5
   |
LL |     &*x
   |     ^^^ free region requires that `'a` must outlive `'static`

error: aborting due to previous error

